# fp-lab-1

./: .gitignore  README.md
.github/workflows/: ci.yml
task11/: common.py  dune-project  task11.opam
task11/lib/: dune  iterative.ml  lazy.ml  mapped.ml  moduled.ml  recursion.ml  tail_recursion.ml
task11/test/: dune  test_task11.ml
task20/: common.py  dune-project  task20.opam
task20/lib/: dune  iterative.ml  lazy.ml  mapped.ml  moduled.ml  recursion.ml  tail_recursion.ml
task20/test/: dune  test_task20.ml
task25/: README.md  common.py  gleam.toml  manifest.toml
task25/src/: lazy.gleam  mapped.gleam  moduled.gleam  recursion.gleam  tail_recursion.gleam  task25.gleam
task25/test/: task25_test.gleam
task6/: .gitignore  README.md  common.py  gleam.toml
task6/src/: lazy.gleam  mapped.gleam  moduled.gleam  recursion.gleam  tail_recursion.gleam  task6.gleam
task6/test/: task6_test.gleam
